2013-12-19  Pedro Vicente  <pvicente@uci.edu>

	* Fixed -X bug, where extra array elements were being printed.
	
	* Add use case for -X in scope variables, in in_grp_3.cdl.

2013-12-19  Charlie Zender  <zender@uci.edu>

	* Document "group" option to ncatted

	* Tweak ncdismember to append specified CF Convention to each dataset

	* Add dsm.cdl to test ncdismember in ICESat-2 and Mable-like cases

	* Print metadata only groups in all desired cases

2013-12-18  Charlie Zender  <zender@uci.edu>

	* Print only extracted groups for prn_flg->trd in old format

	* Print group closing braces for prn_flg->trd in new format

	* Print metadata-only groups when all ancestors have extracted variables

	* Rely on nco_xtr_grp_mrk() and remove duplicate code from nco_xtr_mk()

	* Copy metadata-only groups. Introduce flg_mtd and use flg_xcl to handle group exclusion.

	* Tidy nco_grp_utl.[ch] before addressing metadata-only leaf-group extraction bug

2013-12-17  Charlie Zender  <zender@uci.edu>

	* Regression test for copy/print metadata-only leaf group

	* Better document ncrename behavior with coordinates and groups

2013-12-16  Pedro Vicente  <pvicente@uci.edu>

	* ncwa weights/masks names can be absolute names (start with '/')

	* Add regressions #52, #53 for ncwa weights/masks names with absolute names

2013-12-16  Charlie Zender  <zender@uci.edu>

	* Clarify ncrename coordinate documentation

	* Use target-specific rule to filter-out -Wcast-qual on files with uthash in prototypes

2013-12-12  Pedro Vicente  <pvicente@uci.edu>

	* Dimensions in hyperslabbing arguments are once again checked for
	validity prior to processing and invalid (i.e., non-existant)
	dimensions once-again cause operators to abort.

2013-12-11  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn. grp mmr, ncra.c fixes
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"