@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.482 2013-12-12 21:12:40 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.483 2013-12-22 20:36:28 zender Exp $ */
 
 /* This single source file compiles into three separate executables:
    ncra -- netCDF record averager
@@ -137,8 +137,8 @@ main(int argc,char **argv)
   char *sng_cnv_rcd=NULL_CEWI; /* [sng] strtol()/strtoul() return code */
   char trv_pth[]="/"; /* [sng] Root path of traversal tree */
 
-  const char * const CVS_Id="$Id: ncra.c,v 1.482 2013-12-12 21:12:40 pvicente Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.482 $";
+  const char * const CVS_Id="$Id: ncra.c,v 1.483 2013-12-22 20:36:28 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.483 $";
   const char * const opt_sht_lst="3467ACcD:d:FG:g:HhL:l:n:Oo:p:P:rRt:v:X:xY:y:-:";
 
   cnk_sct **cnk=NULL_CEWI;
@@ -284,6 +284,8 @@ main(int argc,char **argv)
     {"multi_record_output",no_argument,0,0}, /* [flg] Multi-Record Output */
     {"msa_usr_rdr",no_argument,0,0}, /* [flg] Multi-Slab Algorithm returns hyperslabs in user-specified order */
     {"msa_user_order",no_argument,0,0}, /* [flg] Multi-Slab Algorithm returns hyperslabs in user-specified order */
+    {"nsm_fl",no_argument,0,0},
+    {"nsm_grp",no_argument,0,0},
     {"ram_all",no_argument,0,0}, /* [flg] Open (netCDF3) and create file(s) in RAM */
     {"create_ram",no_argument,0,0}, /* [flg] Create file in RAM */
     {"open_ram",no_argument,0,0}, /* [flg] Open (netCDF3) file(s) in RAM */
@@ -308,8 +310,6 @@ main(int argc,char **argv)
     {"fl_fmt",required_argument,0,0},
     {"hdr_pad",required_argument,0,0},
     {"header_pad",required_argument,0,0},
-    {"nsm_fl",required_argument,0,0},
-    {"nsm_grp",required_argument,0,0},
     {"nsm_sfx",required_argument,0,0},
     {"ensemble_suffix",required_argument,0,0},
     /* Long options with short counterparts */
